<resources>
    <string name="app_name">GMS</string>
    <string name="splash_label">Splash</string>
    <string name="signUp_label">SignUp</string>
    <string name="login_label">Login</string>

    <string name="home_label">Home</string>
    <string name="programs_label">Programs</string>
    <string name="contact_us_label">Contact Us</string>
    <string name="about_us_label">About Us</string>
    <string name="my_programmes_label">My Programmes</string>
    <string name="videos_label">Videos</string>

    <string name="forget_password"><u>Forget Password?</u></string>
    <string name="error_general">Error,Try Again</string>
    <string name="no_Connection">No Internet Connection</string>
    <string name="send">Submit</string>
    <string name="try_again">Try Again</string>
    <string name="empty_content">No Content Available</string>
    <string name="loading">Loading…</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="contact">Contact Num</string>

    <string name="university">University</string>
    <string name="education">Education</string>
    <string name="graduation_year">Graduation year</string>
    <string name="note">Notes</string>
    <string name="guest">Guest</string>

    <string name="select_gender">Select Your Gender</string>
    <string name="select_country">Select Your Country</string>
    <string name="select_nationality">Select Your Nationality</string>
    <string name="select_living">Select Your Living</string>
    <string name="required_field">Required Field</string>
    <string name="email_validation">Email is Not Valid</string>
    <string name="password_validation">Password must contain 8 Keys</string>
    <string name="success">Success</string>
    <string name="program">Endodontics</string>
    <string name="department">Surgery</string>

    <string name="empty_email">Email is Empty</string>
    <string name="empty_field">This Field is Empty</string>
    <string name="password_mis_match">Password MisMatch</string>
    <string name="empty_password">Password is Empty</string>
    <string name="edit">Edit</string>

    <string name="country">Country</string>
    <string name="living">Living</string>
    <string name="profile_label">Profile</string>
    <string name="logout">Logout</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="alert">Alert !</string>
    <string name="want_to_logout">You Want to Logout ?</string>
    <string name="permissions_needed">App needs some permissions to Upload Image</string>
    <string name="take_a_picture">Take a Picture</string>
    <string name="open_gallery">Choose from gallery</string>
    <string name="error_select_image">Error Select Image</string>
    <string name="error_upload_image">Error in Uploading Image</string>
    <string name="programme_detils">Programme Details</string>
    <string name="english">English</string>
    <string name="arabic">العربيه</string>
    <string name="select_period">Select Period</string>
    <string name="add_programme">Reserve the Programme</string>
    <string name="should_login">You Should Login , Firstly</string>

    <string name="hours">Hours</string>
    <string name="sets">Sets</string>

    <string name="title">Title</string>
    <string name="message">Message</string>

</resources>