<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/profile_fragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile_label" />

    <item
        android:id="@+id/myProgrammes_fragment"
        android:icon="@drawable/ic_programmes"
        android:title="@string/my_programmes_label" />

    <item
        android:id="@+id/videos_fragment"
        android:icon="@drawable/ic_videos"
        android:title="@string/videos_label" />
    <item
        android:id="@+id/contact_us_fragment"
        android:icon="@drawable/ic_call_us"
        android:title="@string/contact_us_label" />

    <item
        android:id="@+id/auth_fragment"
        android:icon="@drawable/ic_logout"
        android:title="@string/login_label" />

</menu>