<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splash_fragment">


    <fragment
        android:id="@+id/splash_fragment"
        android:name="com.gms.app.ui.splash.SplashFragment"
        android:label="@string/splash_label"
        tools:layout="@layout/splash_fragment">
        <action
            android:id="@+id/action_splash_fragment_to_home_fragment"
            app:destination="@id/home_fragment"
            app:popUpTo="@id/splash_fragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/home_fragment"
        android:name="com.gms.app.ui.home.HomeFragment"
        android:label="@string/home_label"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/login_fragment"
        android:name="com.gms.app.ui.auth.login.LoginFragment"
        android:label="@string/login_label"
        tools:layout="@layout/login_fragment">
        <action
            android:id="@+id/action_login_fragment_to_signUp_fragment"
            app:destination="@id/signUp_fragment"
            app:popUpTo="@id/signUp_fragment"
             />
    </fragment>

    <fragment
        android:id="@+id/signUp_fragment"
        android:name="com.gms.app.ui.auth.signUp.SignUpFragment"
        android:label="@string/signUp_label"
        tools:layout="@layout/sign_up_fragment">

        <action
            android:id="@+id/action_signUp_fragment_to_home_fragment"
            app:destination="@id/home_fragment"
            app:popUpTo="@id/signUp_fragment"
            />
    </fragment>
</navigation>