<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/view_root"
        tools:context=".ui.auth.signUp.SignUpFragment">

        <include
            android:id="@+id/toolbar"
            layout="@layout/default_toolbar_layout" />

        <include
            android:id="@+id/loading_layout"
            layout="@layout/loading_view_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/view_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/fullName_et"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/item_border_focus"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/full_name"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textAlignment="viewStart"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/hintColor"
                    android:textSize="16sp" />


                <EditText
                    android:id="@+id/email_et"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/item_border_focus"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textAlignment="viewStart"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/hintColor"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/item_border_focus"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textAlignment="viewStart"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/hintColor"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/confirmPassword_et"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/item_border_focus"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/confirm_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textAlignment="viewStart"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/hintColor"
                    android:textSize="16sp" />


                <EditText
                    android:id="@+id/phone_et"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/item_border_focus"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/phone"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textAlignment="viewStart"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/hintColor"
                    android:textSize="16sp"
                    tools:ignore="TextFields" />

                <EditText
                    android:id="@+id/contact_et"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/item_border_focus"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/contact"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textAlignment="viewStart"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/hintColor"
                    android:textSize="16sp"
                    tools:ignore="TextFields" />

                <EditText
                    android:id="@+id/address_et"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/item_border_focus"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/address"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textAlignment="viewStart"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/hintColor"
                    android:textSize="16sp"
                    tools:ignore="TextFields" />

                <TextView
                    android:id="@+id/date_ofBirth_txt"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/edit_text_bg"
                    android:gravity="start"
                    android:padding="@dimen/dp_10"
                    android:text="@string/date_of_birth"
                    android:textAlignment="gravity"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/gender_spinner"
                    style="@style/spinnerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="start"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/edit_text_bg"
                    android:gravity="start"
                    android:paddingHorizontal="8dp"
                    android:spinnerMode="dialog"
                    android:textAlignment="gravity" />


                <Spinner
                    android:id="@+id/country_spinner"
                    style="@style/spinnerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="start"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/edit_text_bg"
                    android:gravity="start"
                    android:paddingHorizontal="8dp"
                    android:spinnerMode="dialog"
                    android:textAlignment="gravity" />


                <Spinner
                    android:id="@+id/nationality_spinner"
                    style="@style/spinnerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/edit_text_bg"
                    android:gravity="start"
                    android:paddingHorizontal="8dp"
                    android:spinnerMode="dialog"
                    android:textAlignment="gravity" />

                <Spinner
                    android:id="@+id/living_spinner"
                    style="@style/spinnerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/edit_text_bg"
                    android:gravity="start"
                    android:paddingHorizontal="8dp"
                    android:spinnerMode="dialog"
                    android:textAlignment="gravity" />

                <EditText
                    android:id="@+id/university_et"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/item_border_focus"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/university"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textAlignment="viewStart"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/hintColor"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/education_et"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/item_border_focus"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/education"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textAlignment="viewStart"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/hintColor"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/grad_year_et"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/item_border_focus"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/graduation_year"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textAlignment="viewStart"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/hintColor"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/notes_et"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/item_border_focus"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/note"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textAlignment="viewStart"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/hintColor"
                    android:textSize="16sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sign_up_btn"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="5dp"
                    android:padding="@dimen/dp_10"
                    android:text="@string/send"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:backgroundTint="?attr/colorPrimary"
                    app:cornerRadius="5dp"
                    app:rippleColor="@android:color/white" />


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>