<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/view_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.contactUs.ContactUsFragment">

        <include
            android:id="@+id/toolbar"
            layout="@layout/default_toolbar_layout" />

        <include
            android:id="@+id/loading_layout"
            layout="@layout/loading_view_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/view_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:scaleType="centerInside"
                    android:src="@drawable/app_logo"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:id="@+id/fullName_et"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/item_border_focus"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/full_name"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textAlignment="viewStart"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/hintColor"
                    android:textSize="16sp" />


                <EditText
                    android:id="@+id/email_et"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/item_border_focus"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textAlignment="viewStart"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/hintColor"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/phone_et"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/item_border_focus"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/phone"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textAlignment="viewStart"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/hintColor"
                    android:textSize="16sp"
                    tools:ignore="TextFields" />

                <EditText
                    android:id="@+id/title_et"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/item_border_focus"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/title"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textAlignment="viewStart"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/hintColor"
                    android:textSize="16sp"
                    tools:ignore="TextFields" />

                <EditText
                    android:id="@+id/message_et"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/item_border_focus"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/message"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textAlignment="viewStart"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/hintColor"
                    android:textSize="16sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/send_btn"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="5dp"
                    android:padding="@dimen/dp_10"
                    android:text="@string/send"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:backgroundTint="?attr/colorPrimary"
                    app:cornerRadius="5dp"
                    app:rippleColor="@android:color/white" />


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>